[package]
name = "geph-autotest"
version = "0.1.0"
authors = ["cheekyelf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1", features=["derive"]}
serde_json = "1"
fastrand = "1"
toml = "0.5"
anyhow="1"
ureq = {version = "2", features =["json"]}
structopt = "0.3"
scopeguard="1"
reqwest = "0.11"
tokio = {version = "1", features = ["full"]}